[FEAT] Blessing UI improvements

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -6113,14 +6113,15 @@
   "offering.blessing.success": "Your offering has been sent. Come back tomorrow.",
   "blessing.missingOffering": "Missing offering",
   "blessing.visitGuardians": "Visit the Guardians to make an offering.",
-  "blessing.godsBlessed": "The Gods have blessed your generosity and faith.",
+  "blessing.godsBlessed.winner": "The Gods have blessed your generosity and faith.",
+  "blessing.godsBlessed.loser": "You have not been blessed this time, try again tomorrow.",
   "blessing.prayToGuardians": "Pray to the Guardians",
   "blessing.thankYouOffering": "Thank you for your offering devoted one. The guardians smile upon you, patience is now key. Wait until a new day to receive your blessing.",
   "blessing.left": "left",
-  "blessing.youHaveBeenBlessed": "You have been blessed",
-  "blessing.godsThankFaithful": "The gods have rewarded you for your blessing.",
+  "blessing.youHaveBeenBlessed": "The gods have decided",
+  "blessing.godsThankFaithful": "The gods have blessed players for their offerings.",
   "blessing.claimBlessing": "View results",
-  "blessing.random": "Rewards are distributed randomly.",
+  "blessing.random": "The more players that donate, the greater the reward pool - Rewards are distributed randomly.",
   "blessing.claim": "Claim your prize",
   "blessing.greetings": "Greetings farmer...you have stumbled upon divinity. Are you worthy of a blessing?",
   "blessing.seasonBlooming": "{{season}} is blooming. Will you show your faith in the Gods?",
@@ -6129,15 +6130,16 @@
   "blessing.offeringWarning": "Offerings are donations to the Guardians and will be burnt. No rewards are guaranteed.",
   "blessing.confirm": "Confirm",
   "blessing.offerTitle": "Offer a Blessing",
-  "blessing.guardiansSeek": "Every day, the Guardians seek an offering. Show your faith, for the chance to receive Love Charms - rewards are distributed randomly.",
+  "blessing.guardiansSeek": "Every day, the Guardians seek an offering. Make an offering for the chance to receive Love Charms.",
+  "blessing.guardiansSeek.random": "The more players that donate, the greater the reward pool - Rewards are distributed randomly.",
   "blessing.chooseAmount": "Choose your {{name}} amount",
   "blessing.minimumRequired": "Minimum {{amount}} required",
   "blessings.results": "Blessing results",
   "blessing.offer": "Offer",
-  "seeking.blessing": "Claiming blessing",
-  "seeking.blessing.success": "Congratulations, you have received a blessing!",
+  "seeking.blessing": "Loading",
+  "seeking.blessing.success": "The gods have decided who will be blessed.",
   "blessing.noResults": "No results found for this date",
-  "blessing.donated": "{{amount}} x {{item}} donated",
+  "blessing.donated": "{{amount}} {{item}} donated",
   "blessing.winners": "{{count}} winners",
   "blessing.maxAmount": "Insufficient {{name}}.",
   "marketplace.unlocks.perks": "Grow your land to unlock discounts.",
